--- a/src/components/blocks/JobPlacement/styles.module.scss
+++ b/src/components/blocks/JobPlacement/styles.module.scss
@@ -1,16 +1,16 @@
 @use '../../../app/\(frontend\)/colors' as *;
 
 .jobPlacement {
-  padding: 10rem 0;
+  padding: 10rem 0 0;
   background-color: $white;
 }
 .container {
-  max-width: 1200px;
+  max-width: 1300px;
 }
 .flexBox {
   display: flex;
   flex-direction: column;
-  gap: 5rem;
+  gap: 12rem;
   @media (min-width: 1100px) {
     flex-direction: row;
   }
